[gd_scene load_steps=5 format=3 uid="uid://cu8r5ku6lbxdk"]

[ext_resource type="Script" uid="uid://bywlwb7yncet7" path="res://fuck_it/dead_simple/xray_visualizer/xray_viewer.gd" id="1_8h7qr"]
[ext_resource type="Script" uid="uid://d3ou3gnvs6wop" path="res://fuck_it/dead_simple/xray_visualizer/xray_camera.gd" id="2_n4x2r"]

[sub_resource type="Environment" id="Environment_1_2j8dq"]
background_mode = 1
background_color = Color(0.05, 0.05, 0.1, 1)
ambient_light_source = 1
ambient_light_color = Color(0.3, 0.3, 0.4, 1)
ambient_light_energy = 0.2

[sub_resource type="SphereMesh" id="SphereMesh_pyyum"]

[node name="XrayVisualizerScene" type="Node3D"]

[node name="Environment" type="Node3D" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="Environment"]
environment = SubResource("Environment_1_2j8dq")

[node name="XrayCamera" type="Camera3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 3, 3, 3)
fov = 60.0
script = ExtResource("2_n4x2r")

[node name="SkeletonMesh" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_pyyum")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="XrayViewer" type="ColorRect" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
script = ExtResource("1_8h7qr")

[node name="Instructions" type="Label" parent="UI"]
modulate = Color(0.8, 0.9, 1, 1)
layout_mode = 0
anchor_left = 0.02
anchor_top = 0.02
anchor_right = 0.5
anchor_bottom = 0.2
text = "X-RAY SKELETON VIEWER

CONTROLS:
• Left Mouse + Drag: Rotate around skeleton
• Mouse Wheel: Zoom in/out
• WASD: Move camera
• Q/E: Move up/down

Load your k9_int_organs_skeleton_alone.fbx 
into the SkeletonMesh node!"

[connection signal="ready" from="XrayCamera" to="UI/XrayViewer" method="setup_camera_controls"]
